@@ -1,4 +1,6 @@
 -------------------------------------------------
+GearSwap 0.818 - Added call_user_event() user function. Added pet_acquired() user event.
+-------------------------------------------------
 GearSwap 0.817 - Added filtering to //gs validate. Added pet_midcast() user function.
 -------------------------------------------------
 GearSwap 0.816 - Automaton midcast fixed. //gs fixed. //gs export no longer requires a user file (except for the sets option).
